    Packages".
  * Ch. "Non-Maintainer Uploads (NMUs) and Porters":  new chapter
    discussing NMUs and porters; Section "Interim Releases" integrated out
    of existance
  * of course the obligatory typo, grammar, and spelling corrections

  * Makefile: small changes to accomodate DDP autobuild
  * debian/dirs: obsolete, removed

 -- Adam Di Carlo <aph@debian.org>  Mon, 16 Nov 1998 00:45:03 -0500

developers-reference (2.5.0) frozen unstable; urgency=low

  * move to 3-level version number:
    top-level version number probably won't change for a whil, it is the
    "major", the second-level number means significant content changes,
    and the third-level change means corrections and minor improvements.
    Since this version has significant content changes, we are now 2.5.0.
    Since I'm going to put porter instructions in the next major rev, that
    will be 2.6.0...

  * use new <package> tag where appropriate (Ardo, you rock)
  * replace 'm86k' with 'm68k'
  * rename 'Whirlwind Tour of ...' section to 'Overview of ...' (suggested 
    by James Troup)
  * typos and "red-pen" corrections, fix cosmetic problems in PostScript
    version
  * remove the one case I use an URL fragment identifier, since
    debiandoc-sgml doesn't like it (bug filed against debiandoc-sgml)
  * debian/rules: cosmetic cleanups, loosen check for root
  * debian/rules: build PostScript version during build, since it's nice
    to have all my debiandoc2* scripts together
  * debian/control: policy compliant to 2.5.0

  * advise against uploading when a package has lintian problems of
    severity 'E'
  * "Mailing Lists and Servers":
    - "The master server": mention how master is the home of the BTS;
      mention how users need to take care with their accounts on master
    - "The WWW servers": fill in www.debian.org, first pass, and discuss
      how to put up your own web pages on va or master
    - "The CVS server": new section added