@@ -22,8 +22,9 @@ make_directory	:= install -d -o root -g root -m 755
 compress	:= gzip -9f
 
 # version abstraction
-DEB_VERSION	:= $(shell LC_ALL=C dpkg-parsechangelog | grep ^Version: | sed 's/^Version: *//')
-DATE		:= $(shell date +"%Y-%m-%d")
+DEB_VERSION	:= $(shell LC_ALL=C dpkg-parsechangelog | grep '^Version: ' | sed 's/^Version: *//')
+# pretty-print the date
+DATE		:= $(shell date --date="`dpkg-parsechangelog | grep '^Date: ' | sed 's/^Date: *//'`" '+%d %B, %Y')
 
 # source depends -- check if these packages are installed
 SRC_DEPENDS	:= debiandoc-sgml lout psutils
@@ -44,7 +45,7 @@ build:	developers-reference.sgml
 	rm -f version.ent
 	echo "<!entity version \"$(DEB_VERSION)\">" >> version.ent
 	echo "<!entity date    \"$(DATE)\">"        >> version.ent
-	nsgmls -gues developers-reference.sgml	# check SGML syntax
+	nsgmls -wall -s -E20 developers-reference.sgml	# check SGML syntax
 	debiandoc2html developers-reference.sgml
 	debiandoc2text developers-reference.sgml
 	debiandoc2ps -pletter -1 developers-reference.sgml
