@@ -11,8 +11,9 @@ developers-reference (2.5.0.1) frozen unstable; urgency=low
 
   * Makefile: small changes to accomodate DDP autobuild
   * debian/dirs: obsolete, removed
+  * debian/rules: use changelog date for SGML timestamping, not current date
 
- -- Adam Di Carlo <aph@debian.org>  Mon, 16 Nov 1998 00:45:03 -0500
+ -- A. P. Harris <apharris@onShore.com>  Mon, 16 Nov 1998 03:18:35 -0500
 
 developers-reference (2.5.0) frozen unstable; urgency=low
 
